[tool.poetry]
name = "pycord-ipc"
version = "0.1.0"
description = "A maintained inter-process-communication extension for Pycord"
authors = ["No767 <73260931+No767@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "pycord_ipc"}]
homepage = "https://github.com/No767/pycord-ipc"
repository = "https://github.com/No767/pycord-ipc"
documentation = "https://github.com/No767/pycord-ipc" # switch this later to one for the rtd docs
classifiers = [
    "Development Status :: 1 - Planning",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Communications",
    "Topic :: Documentation",
    "Topic :: Internet",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
py-cord = "^2.3.0"
websockets = "^10.4"
uvloop = {version = "^0.17.0", optional = true}

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.2"

[tool.poetry.extras]
uvloop = ["uvloop"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/No767/pycord-ipc/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
